logcheck (1.2.30) unstable; urgency=low

  maks
  * Move pptpd rules to level server.
  * Small typo fixes in README.logcheck-database.

 -- 

logcheck (1.2.29) unstable; urgency=low

  maks:
  * Don't report sudo calls where pwd contains spaces (Closes: #272969)
  * Fix trailing space in perdition rule. (Closes: #273433)
  * Small documentation update how to test rules without fiddling with
    trailing space.
  * sed fine tuning to speed up + remove trailing tabs. thanks alfie
  * Don't use -m switch from sort, it basically disables sorting.
    Remove gratious call to uniq that should be done with SORTUNIQ.
    (Closes: #270677)
  * Add violations.ignore.d/su on old logfiles to be removed on sarge upgrade.
  * Add rules for kdm/wdm/xdm, kernel (usb, keyboard) on level workstation.
  * Only show "rules-directories-note" on upgrade.
  * Enhance ppp rules on level workstation. (Closes: #270019)
    Add pppoa3 rules to the ppp rules.
  * Small update concerning reject messages in postfix + new rule.
  * Added pptpd rules at level workstation.
    thanks to Erich Schubert <erich@debian.org>
  * Added first pure-ftpd rules at level server.
  * Fix cyrus violations.ignore.d rules for higher pids.
  todd:
  * Add 1 dovecot rule
  * Fix another permission issue involving rulefiles.  Added chown to debian/
  rules.
  * Simpler formatting on version string.
  jamie:
  * Updated rules for innd, added rule for cleanfeed.
  * Small correction to gps rules.
  * Added SPF postfix policy server rule for 'SPF pass'. 
  * Fix spelling mistake in dhcp rules. (Closes: #276063)
  * Change dhcp rules to reflect ISC's change of name. 
    Thanks to Dirk Prosdorf for the patch. (Closes: #276317)

 -- Todd Troxell <ttroxell@debian.org>  Saturday, 16 Oct 2004 19:14:03 -0500

logcheck (1.2.28) unstable; urgency=low

  maks:
  * Small fixes: join 2 lines in ignore.d.server/postfix, add '^' for 
    start-of-line ignore.d.server/scponly (Closes: #270398)