@@ -3,6 +3,7 @@ logcheck (1.2.30) unstable; urgency=low
   maks
   * Move pptpd rules to level server.
   * Small typo fixes in README.logcheck-database.
+  * Set group ownership in Makefile for non debian installs.
 
  -- 
 
